--- a/linearreg-assignment.ipynb
+++ b/linearreg-assignment.ipynb
@@ -81,7 +81,7 @@
     "    retorna um numpy array com os valores de theta resultantes da equação. Podem ser Nulos\n",
     "    \"\"\"\n",
     "    X = df.iloc[:,:-1].values\n",
-    "    X = np.asarray(list(map(lambda x : [1] + list(x), X)))\n",
+    "    X = np.asarray(list(map(lambda x : np.asarray([1] + list(x)), X)))\n",
     "    Xt = X.transpose()\n",
     "    Y = df.iloc[:,-1].values\n",
     "    \n",
@@ -174,7 +174,7 @@
     "    \n",
     "    if type(theta) == list:\n",
     "        theta = np.asarray(theta)\n",
-    "        \n",
+    "    \n",
     "    assert df.shape[1] == len(theta) # the class represents the dummy feature\n",
     "    \n",
     "    updated = []\n",
@@ -384,30 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-12c7e3ede343>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 71\u001b[0;31m \u001b[0mlogreg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLogReg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight_decay\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-12c7e3ede343>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input_size, learning_rate, sigma, weight_decay)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#         self.theta = sigma * np.random.randn(input_size)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtheta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msigma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_size\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrads\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class LogReg(object):\n",
     "    def __init__(self, input_size, learning_rate=1e-1, sigma=1, weight_decay=0.01):\n",
     "        self.weight_decay = weight_decay\n",
     "        self.sigma = sigma\n",
     "        self.learning_rate = learning_rate\n",
-    "#         self.theta = sigma * np.random.randn(input_size)\n",
-    "        self.theta = sigma * np.random.randn(input_size+1)\n",
+    "        self.theta = sigma * np.random.randn(input_size)\n",
     "        self.bias = np.zeros(1)\n",
     "        self.grads = {}\n",
     "    \n",
@@ -418,10 +404,11 @@
     "        \"\"\"\n",
     "        pred = []\n",
     "        self.grads[\"preds\"] = []\n",
-    "        print (x)\n",
+    "        \n",
     "        for xj in x:\n",
     "            xj = np.asarray([1]+list(xj))\n",
-    "            a = np.matmul(self.theta,xj)\n",
+    "            t = np.asarray(list(self.bias)+list(self.theta))\n",
+    "            a = np.matmul(t,xj)\n",
     "            pred.append(sigmoid(a))\n",
     "            \n",
     "            self.grads[\"preds\"].append(np.asarray(list(xj)+[pred[-1]])) #do dis?\n",
@@ -449,19 +436,15 @@
     "        del self.grads[\"preds\"]\n",
     "        \n",
     "        updated = []\n",
-    "        for j in range(len(self.theta)): # j in (0 .. m)\n",
-    "            ac = 0\n",
-    "            for i in range(df.shape[0]): # i in (0 .. N-1)\n",
-    "                Xi = df[i][:-1]\n",
-    "                ac += (df[i][-1] - y[i]) * Xi[j]\n",
-    "\n",
-    "            ac = ac*self.learning_rate/df.shape[0]\n",
-    "            updated.append(self.theta[j] - ac)\n",
+    "        for j in range(len(self.theta)+1): # j in (0 .. m)\n",
+    "            ac = np.asarray([\n",
+    "                    (df[i][-1] - y[i]) * df[i][j] for i in range(df.shape[0]) # i in (0 .. N-1)\n",
+    "                ]).mean()\n",
+    "            \n",
+    "            updated.append(ac)\n",
     "        \n",
-    "        self.theta = np.asarray(updated)\n",
-    "        \n",
-    "        self.grads[\"b\"] = 0\n",
-    "        self.grads[\"w\"] = 0\n",
+    "        self.grads[\"b\"] = np.asarray(updated[:1])\n",
+    "        self.grads[\"w\"] = np.asarray(updated[1:])\n",
     "        \n",
     "#         raise NotImplementedError(\"implementar o backward\")\n",
     "        return loss,self.grads\n",
@@ -483,23 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'plt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-eb18511e9921>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\"\"\"Nao alterar abaixo\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Cria o grafico e atualiza os pesos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0max1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max3\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Training Loss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0max2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Training Accuracy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"Alterar estes hiperparametros\"\"\"\n",
     "epochs = 20\n",
