--- a/linearreg-assignment.ipynb
+++ b/linearreg-assignment.ipynb
@@ -182,9 +182,10 @@
     "        ac = 0\n",
     "        \n",
     "        for i in range(df.shape[0]): # i in (0 .. N-1)\n",
-    "            Xi = df.iloc[i,:-1].values\n",
+    "            Xi = np.asarray([1] + list(df.iloc[i,:-1].values))\n",
     "            Yi = df.iloc[i,-1]\n",
-    "            tmp = matmul(Tt,Xi) - Yi\n",
+    "            \n",
+    "            tmp = matmul(theta,Xi) - Yi\n",
     "            ac += tmp * Xi[j]\n",
     "            \n",
     "        ac = ac*learning_rate/df.shape[0]\n",
