--- a/linearreg-assignment.ipynb
+++ b/linearreg-assignment.ipynb
@@ -85,10 +85,17 @@
     "    Xt = X.transpose()\n",
     "    Y = df.iloc[:,-1].values\n",
     "    \n",
-    "    from numpy.linalg import inv\n",
+    "    from numpy.linalg import inv, pinv\n",
     "    from numpy import matmul\n",
     "    \n",
-    "    theta = matmul(matmul(inv(matmul(Xt,X)),Xt),Y)\n",
+    "    theta = matmul(Xt,X)\n",
+    "    \n",
+    "    try:\n",
+    "    	theta = inv(theta)\n",
+    "    except:\n",
+    "    	theta = pinv(theta)\n",
+    "    \n",
+    "    theta = matmul(matmul(theta,Xt),Y)\n",
     "    \n",
     "    return theta"
    ]
