--- a/neuralnetwork-assignment.ipynb
+++ b/neuralnetwork-assignment.ipynb
@@ -162,7 +162,6 @@
     "                ))\n",
     "        \n",
     "        return np.asarray(r)\n",
-    "#         raise NotImplementedError(\"implementar o relu\")\n",
     "    \n",
     "    def backward(self, x):\n",
     "        \"\"\"\n",
@@ -176,7 +175,6 @@
     "                ))\n",
     "        \n",
     "        return np.asarray(r)\n",
-    "#         raise NotImplementedError(\"implementar o relu\")\n",
     "\n",
     "        \n",
     "class Sigmoid(object):\n",
@@ -196,14 +194,12 @@
     "                ))\n",
     "        \n",
     "        return np.asarray(r)\n",
-    "#         raise NotImplementedError(\"implementar o sigmoid\")\n",
     "        \n",
     "    def backward(self, x):\n",
     "        \"\"\"\n",
     "        x: Entrada no backward (batch_size, numero_de_neuronios)\n",
     "        retorna a saída da derivada da ativação sigmoidal (batch_size, numero_de_neuronios)\n",
     "        \"\"\"\n",
-    "        \n",
     "        r = []\n",
     "        for xs in x:\n",
     "            r.append(np.asarray(\n",
@@ -211,7 +207,6 @@
     "                ))\n",
     "        \n",
     "        return np.asarray(r)\n",
-    "#         raise NotImplementedError(\"implementar o sigmoid\")\n",
     "        \n",
     "\n",
     "def softmax(x):\n",
@@ -227,8 +222,7 @@
     "        s = sum(e_z)\n",
     "        r.append(np.asarray([v/s for v in e_z]))\n",
     "    \n",
-    "    return np.asarray(r)\n",
-    "#     raise NotImplementedError(\"implementar o softmax\")"
+    "    return np.asarray(r)"
    ]
   },
   {
@@ -285,9 +279,6 @@
     "        \"\"\"\n",
     "        self.LAYERS = 3\n",
     "        \n",
-    "        if len(x.shape) == 1:\n",
-    "            x = np.asarray([x])\n",
-    "        \n",
     "        self.intermediate_results = [x]\n",
     "        f = [self.activation_fn.forward,self.activation_fn.forward,softmax]\n",
     "        \n",
@@ -316,8 +307,8 @@
     "            from math import log\n",
     "            def ce(yi,pred):\n",
     "                if yi:\n",
-    "                    return -log(pred + 1e-15)\n",
-    "                return -log(1-pred + 1e-15)\n",
+    "                    return -log(pred + 1e-15) #To avoid an unlikely\n",
+    "                return -log(1-pred + 1e-15) #yet possible log(0)\n",
     "            \n",
     "            ac = sum([sum(map(lambda vi : \n",
     "                               ce(vi[0],vi[1]), zip(ys[i],preds[i])\n",
@@ -338,8 +329,7 @@
     "        \n",
     "        loss = cat_ce(y_adj,self.intermediate_results[-1])\n",
     "        \n",
-    "        last = np.asarray(self.intermediate_results[-1]) - np.asarray(y_adj)\n",
-    "        \n",
+    "        last = np.asarray(self.intermediate_results[-1]) - np.asarray(y_adj) # Yhat - Y\n",
     "        f = [self.activation_fn.backward,self.activation_fn.backward, lambda x : 1]\n",
     "        \n",
     "        adds = {}\n",
@@ -380,7 +370,6 @@
     "            self.grads[\"w\"+str(i)][wi,j] = self.weight_decay*v[0]/v[1]\n",
     "        \n",
     "        return loss,self.grads\n",
-    "#         raise NotImplementedError(\"implementar o backward\")\n",
     "        \n",
     "    def optimize(self):\n",
     "        \"\"\"\n",
@@ -1366,7 +1355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
